# codspeed-rust

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  TESTING_double_with_s_report  TESTING_single_event.data  TESTING_single_event_report  rust-toolchain.toml  stderr.out  stdout.out
crates/bencher_compat/: Cargo.toml  README.md
crates/bencher_compat/benches/: bencher_example.rs
crates/bencher_compat/src/: compat.rs  lib.rs
crates/cargo-codspeed/: Cargo.toml  README.md  build.rs
crates/cargo-codspeed/src/: app.rs  benchmark_metadata.rs  build.rs  helpers.rs  main.rs  measurement_mode.rs  prelude.rs  run.rs  walltime.rs  walltime_results.rs
crates/cargo-codspeed/tests/: cargo_config.rs  crates_working_directory.rs  default_harness_error.rs  features.rs  helpers.rs  measurement_modes.rs  package_in_deps.rs  simple-bencher.rs  simple-criterion.rs  simple-divan.rs  simple.rs  workspace.rs
crates/cargo-codspeed/tests/cargo_config.in/: Cargo.toml  build.rs
crates/cargo-codspeed/tests/cargo_config.in/.cargo/: config.toml
crates/cargo-codspeed/tests/cargo_config.in/benches/: cargo_config_bench.rs
crates/cargo-codspeed/tests/crates_working_directory.in/: Cargo.toml
crates/cargo-codspeed/tests/crates_working_directory.in/the_crate/: Cargo.toml
crates/cargo-codspeed/tests/default_harness_error.in/: Cargo.toml
crates/cargo-codspeed/tests/default_harness_error.in/benches/: bencher_correct.rs  bencher_example.rs  bencher_no_section.rs
crates/cargo-codspeed/tests/features.in/: Cargo.toml
crates/cargo-codspeed/tests/features.in/benches/: bench.rs
crates/cargo-codspeed/tests/package_in_deps.in/: Cargo.toml
crates/cargo-codspeed/tests/simple-bencher.in/: Cargo.toml
crates/cargo-codspeed/tests/simple-bencher.in/benches/: bencher_example.rs
crates/cargo-codspeed/tests/simple-criterion.in/: Cargo.toml
crates/cargo-codspeed/tests/simple-criterion.in/benches/: another_criterion_example.rs
crates/cargo-codspeed/tests/simple-divan.in/: Cargo.toml
crates/cargo-codspeed/tests/simple-divan.in/benches/: another_divan_example.rs  divan_example.rs
crates/cargo-codspeed/tests/simple.in/: Cargo.toml
crates/cargo-codspeed/tests/simple.in/benches/: another_bencher_example.rs  bencher_example.rs
crates/cargo-codspeed/tests/workspace.in/a/: Cargo.toml
crates/cargo-codspeed/tests/workspace.in/b/: Cargo.toml
crates/codspeed/: Cargo.toml  README.md  build.rs
crates/codspeed/benches/: native.rs
crates/codspeed/src/: codspeed.rs  compat_utils.rs  fifo.rs  lib.rs  macros.rs  measurement.rs  shared.rs  utils.rs  walltime.rs  walltime_results.rs
crates/codspeed/src/instrument_hooks/: bindings.rs  ffi.rs  mod.rs  update-bindings.sh
crates/codspeed/src/request/: mod.rs
crates/codspeed/src/request/arch/: aarch64.rs  arm.rs  unsupported.rs  x86.rs  x86_64.rs
crates/criterion_compat/: Cargo.toml  README.md  build.rs
crates/criterion_compat/benches/: criterion_example.rs  criterion_integration_fibonaccis.rs  criterion_integration_main.rs  criterion_integration_measurement_overhead.rs  criterion_integration_with_inputs.rs  custom_main.rs  repro_custom_main.rs  test_benches.rs
crates/criterion_compat/benches/criterion_integration/: async_measurement_overhead.rs  compare_functions.rs  custom_measurement.rs  external_process.py  external_process.rs  iter_manual.rs  iter_with_large_drop.rs  iter_with_large_setup.rs  iter_with_setup.rs  measurement_overhead.rs  mod.rs  sampling_mode.rs  sleep.rs  special_characters.rs  with_inputs.rs
crates/criterion_compat/criterion_fork/: CONTRIBUTING.md  Cargo.toml
crates/criterion_compat/criterion_fork/bencher_compat/: Cargo.toml
crates/criterion_compat/criterion_fork/bencher_compat/benches/: bencher_example.rs
crates/criterion_compat/criterion_fork/bencher_compat/src/: lib.rs
crates/criterion_compat/criterion_fork/benches/: bench_main.rs
crates/criterion_compat/criterion_fork/book/: book.toml
crates/criterion_compat/criterion_fork/book/src/: analysis.md  criterion_rs.md  faq.md  migrating_0_2_to_0_3.md
crates/criterion_compat/criterion_fork/ci/: script.sh
crates/criterion_compat/criterion_fork/macro/: Cargo.toml
crates/criterion_compat/criterion_fork/macro/benches/: test_macro_bench.rs
crates/criterion_compat/criterion_fork/macro/src/: lib.rs
crates/criterion_compat/criterion_fork/plot/: Cargo.toml  README.md
crates/criterion_compat/criterion_fork/plot/src/: lib.rs
crates/criterion_compat/criterion_fork/src/: bencher.rs  benchmark_group.rs  codspeed_iter_manual.rs  lib.rs  macros.rs  routine.rs
crates/criterion_compat/criterion_fork/src/analysis/: mod.rs
crates/criterion_compat/criterion_fork/src/html/: benchmark_report.html.tt  (+3 more)
crates/criterion_compat/criterion_fork/tests/: criterion_tests.rs
crates/criterion_compat/src/: lib.rs
crates/criterion_compat/src/compat/: bencher.rs  criterion.rs  filter.rs  group.rs  macros.rs  mod.rs
crates/criterion_compat/src/default_compat/: mod.rs
crates/divan_compat/: Cargo.toml  README.md
crates/divan_compat/benches/: basic_example.rs  branching_example.rs  cycle_example.rs  drop_example.rs  fib_example.rs  rayon_example.rs  sleep_benches.rs  thread_example.rs
crates/divan_compat/divan_fork/: .gitignore  Cargo.toml
crates/divan_compat/divan_fork/macros/: Cargo.toml
crates/divan_compat/divan_fork/src/: divan.rs  private.rs  thread_pool.rs
crates/divan_compat/divan_fork/tests/: attr_options.rs  entry_properties.rs  forbid_unsafe.rs  weird_usage.rs
crates/divan_compat/examples/: Cargo.toml  README.md  build.rs
crates/divan_compat/examples/benches/: alloc.rs  counters.rs  env.rs  math.rs  parse_pr.rs  sort.rs  the_algorithms.rs  time.rs  time_scale.rs
crates/divan_compat/examples/src/: lib.rs
crates/divan_compat/examples/todo/: atomic.rs  collections.rs  memcpy.rs  panic.rs  string.rs  threads.rs
crates/divan_compat/macros/: Cargo.toml
crates/divan_compat/macros/src/: args.rs  lib.rs
crates/divan_compat/src/: lib.rs
crates/divan_compat/src/compat/: bench.rs  cli.rs  config.rs  entry.rs  mod.rs  private.rs  uri.rs
(+84 files in other folders)
