[workspace]
members = [
    "crates/codspeed",
    "crates/bencher_compat",
    "crates/criterion_compat",
    "crates/cargo-codspeed",
    "crates/divan_compat",
    "crates/divan_compat/macros",
    "crates/divan_compat/divan_fork",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
