[workspace]
members = [
  "crates/codspeed",
  "crates/bencher_compat",
  "crates/cargo-codspeed",

  "crates/criterion_compat",
  "crates/criterion_compat/criterion_fork",

  "crates/divan_compat",
  "crates/divan_compat/macros",
  "crates/divan_compat/divan_fork",
  "crates/divan_compat/examples",
]
resolver = "2"

[workspace.dependencies]
itertools = "0.14.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tempfile = "3.7.0"
