[package]
name = "codspeed-bencher-compat"
version = "4.0.2"
rust-version = "1.74" # MSRV
edition = "2021"
description = "Bencher compatibility layer for CodSpeed"
authors = ["Arthur Pastel <arthur@codspeed.io>"]
documentation = "https://codspeed.io/docs/reference/codspeed-rust/bencher"
readme = "README.md"
repository = "https://github.com/CodSpeedHQ/codspeed-rust"
homepage = "https://codspeed.io"
license = "MIT OR Apache-2.0"
categories = [
    "development-tools",
    "development-tools::profiling",
    "development-tools::testing",
]
keywords = ["codspeed", "benchmark", "bencher"]

[dependencies]
bencher = "0.1.5"
codspeed = { path = "../codspeed", version = "=4.0.2" }

[[bench]]
name = "bencher_example"
harness = false
