[package]
name = "cargo-codspeed"
version = "2.7.1"
edition = "2021"
description = "Cargo extension to build & run your codspeed benchmarks"
authors = ["Arthur Pastel <arthur@codspeed.io>"]
documentation = "https://docs.codspeed.io"
readme = "README.md"
repository = "https://github.com/CodSpeedHQ/codspeed-rust"
homepage = "https://codspeed.io"
license = "MIT OR Apache-2.0"
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
    "development-tools::profiling",
    "development-tools::testing",
]
keywords = ["codspeed", "benchmark", "cargo"]

[dependencies]
cargo = "0.81.0"
clap = { version = "=4.5.17", features = ["derive"] }
termcolor = "1.4"
anyhow = "1.0.86"
itertools = "0.13.0"
anstyle = "1.0.8"

[dev-dependencies]
assert_cmd = "2.0.15"
fs_extra = "1.3.0"
predicates = "3.1.2"
uuid = { version = "1.10.0", features = ["v4"] }

[features]
vendored-openssl = ["cargo/vendored-openssl"]
