[package]
name = "cargo-codspeed"
version = "2.8.0"
edition = "2021"
description = "Cargo extension to build & run your codspeed benchmarks"
authors = ["Arthur Pastel <arthur@codspeed.io>"]
documentation = "https://docs.codspeed.io"
readme = "README.md"
repository = "https://github.com/CodSpeedHQ/codspeed-rust"
homepage = "https://codspeed.io"
license = "MIT OR Apache-2.0"
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
    "development-tools::profiling",
    "development-tools::testing",
]
keywords = ["codspeed", "benchmark", "cargo"]

[dependencies]
cargo_metadata = "0.19.1"
clap = { version = "=4.5.17", features = ["derive", "env"] }
termcolor = "1.4"
anyhow = "1.0.86"
itertools = { workspace = true }
anstyle = "1.0.8"
serde = { workspace = true }
serde_json = { workspace = true }
codspeed = { path = "../codspeed", version = "=2.8.0" }
glob = "0.3.2"
statrs = "0.18.0"

[dev-dependencies]
assert_cmd = "2.0.15"
fs_extra = "1.3.0"
predicates = "3.1.2"
uuid = { version = "1.10.0", features = ["v4"] }

[features]
vendored-openssl = []
