[package]
name = "cargo-codspeed"
version = "4.0.5"
rust-version = "1.74" # MSRV
edition = "2021"
description = "Cargo extension to build & run your codspeed benchmarks"
authors = ["Arthur Pastel <arthur@codspeed.io>"]
documentation = "https://codspeed.io/docs/reference/codspeed-rust/cargo-codspeed"
readme = "README.md"
repository = "https://github.com/CodSpeedHQ/codspeed-rust"
homepage = "https://codspeed.io"
license = "MIT OR Apache-2.0"
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
    "development-tools::profiling",
    "development-tools::testing",
]
keywords = ["codspeed", "benchmark", "cargo"]

[dependencies]
cargo_metadata = "0.23.0"
clap = { version = "=4.5.17", features = ["derive", "env"] }
termcolor = "1.4"
anyhow = { workspace = true }
itertools = { workspace = true }
anstyle = "1.0.8"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
codspeed = { path = "../codspeed", version = "=4.0.5" }

[dev-dependencies]
assert_cmd = "2.0.15"
fs_extra = "1.3.0"
predicates = "3.1.2"

[features]
vendored-openssl = []
