[package]
name = "codspeed"
version = "2.10.1"
rust-version = "1.74" # MSRV
edition = "2021"
description = "Core instrumentation library for CodSpeed"
authors = ["Arthur Pastel <arthur@codspeed.io>"]
documentation = "https://docs.codspeed.io"
readme = "README.md"
repository = "https://github.com/CodSpeedHQ/codspeed-rust"
homepage = "https://codspeed.io"
license = "MIT OR Apache-2.0"
categories = [
    "development-tools",
    "development-tools::profiling",
    "development-tools::testing",
]
keywords = ["codspeed", "benchmark"]

[dependencies]
colored = "2.0.0"
libc = "^0.2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.12.1", features = ["v4"] }

[[bench]]
name = "native"
harness = false

[dev-dependencies]
tempfile = { workspace = true }
