[package]
name = "codspeed"
version = "3.0.1"
rust-version = "1.74" # MSRV
edition = "2021"
description = "Core instrumentation library for CodSpeed"
authors = ["Arthur Pastel <arthur@codspeed.io>"]
documentation = "https://docs.codspeed.io"
readme = "README.md"
repository = "https://github.com/CodSpeedHQ/codspeed-rust"
homepage = "https://codspeed.io"
license = "MIT OR Apache-2.0"
categories = [
    "development-tools",
    "development-tools::profiling",
    "development-tools::testing",
]
keywords = ["codspeed", "benchmark"]

[dependencies]
anyhow = { workspace = true }
bincode = "1.3.3"
colored = "2.0.0"
glob = "0.3.2"
libc = "^0.2"
nix = { version = "0.29.0", features = ["fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
statrs = "0.18.0"
uuid = { version = "1.12.1", features = ["v4"] }

[[bench]]
name = "native"
harness = false

[dev-dependencies]
tempfile = { workspace = true }
