[package]
name = "codspeed"
version = "3.0.5"
rust-version = "1.74" # MSRV
edition = "2021"
description = "Core instrumentation library for CodSpeed"
authors = ["Arthur Pastel <arthur@codspeed.io>"]
documentation = "https://docs.codspeed.io"
readme = "README.md"
repository = "https://github.com/CodSpeedHQ/codspeed-rust"
homepage = "https://codspeed.io"
license = "MIT OR Apache-2.0"
categories = [
    "development-tools",
    "development-tools::profiling",
    "development-tools::testing",
]
keywords = ["codspeed", "benchmark"]

[dependencies]
anyhow = { workspace = true }
colored = "2.0.0"
glob = "0.3.2"
libc = "^0.2"
nix = { version = "0.30.1", features = ["time"] }
serde = { workspace = true }
serde_json = { workspace = true }
statrs = { version = "0.18.0", default-features = false }
uuid = { version = "1.12.1", features = ["v4"] }

[[bench]]
name = "native"
harness = false

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
bindgen = "0.72.1"
cc = "1.0"
