[package]
name = "codspeed-criterion-compat"
version = "1.1.0"
edition = "2021"
description = "Criterion.rs compatibility layer for CodSpeed"
authors = ["Arthur Pastel <arthur@codspeed.io>"]
documentation = "https://docs.codspeed.io"
readme = "README.md"
repository = "https://github.com/CodSpeedHQ/codspeed-rust/tree/main/crates/criterion_compat"
homepage = "https://codspeed.io"
license = "MIT OR Apache-2.0"
categories = [
    "development-tools",
    "development-tools::profiling",
    "development-tools::testing",
]
keywords = ["codspeed", "benchmark", "criterion"]
[dependencies]
criterion = "0.4"
codspeed = { path = "../codspeed", version = "1.0.0" }
colored = "2.0.0"

futures = { version = "0.3", default_features = false, optional = true }
smol = { version = "1.2", default-features = false, optional = true }
tokio = { version = "1.0", default-features = false, features = [
  "rt",
], optional = true }
async-std = { version = "1.9", optional = true }

[features]
async = ["futures", "criterion/async"]

async_futures = ["criterion/async_futures", "futures/executor", "async"]
async_smol    = ["criterion/async_smol", "smol", "async"]
async_tokio   = ["criterion/async_tokio", "tokio", "async"]
async_std     = ["criterion/async_std", "async-std", "async"]


[[bench]]
name = "criterion_example"
harness = false

[[bench]]
name = "criterion_integration_main"
harness = false

[[bench]]
name = "test_benches"
harness = false
