[package]
name = "codspeed-divan-compat"
version = "2.7.2"
rust-version = "1.74" # MSRV TODO: Check versioning
edition = "2021"
description = "Bencher compatibility layer for CodSpeed"
authors = ["Arthur Pastel <arthur@codspeed.io>"]
documentation = "https://docs.codspeed.io"
readme = "README.md"
repository = "https://github.com/CodSpeedHQ/codspeed-rust"
homepage = "https://codspeed.io"
license = "MIT OR Apache-2.0"
categories = [
    "development-tools",
    "development-tools::profiling",
    "development-tools::testing",
]
keywords = ["codspeed", "benchmark", "divan"]

[dependencies]
codspeed = { path = "../codspeed", version = "=2.7.2" }
divan = { git = "https://github.com/CodSpeedHQ/divan" }
codspeed-divan-compat-macros = { version = "=2.7.2", path = './macros' }

[[bench]]
name = "basic_example"
harness = false
