[package]
name = "codspeed-divan-compat"
version = "3.0.5"
rust-version = "1.80"
edition = "2021"
description = "Divan compatibility layer for CodSpeed"
authors = ["Arthur Pastel <arthur@codspeed.io>"]
documentation = "https://codspeed.io/docs/reference/codspeed-rust/divan"
readme = "README.md"
repository = "https://github.com/CodSpeedHQ/codspeed-rust"
homepage = "https://codspeed.io"
license = "MIT OR Apache-2.0"
categories = [
  "development-tools",
  "development-tools::profiling",
  "development-tools::testing",
]
keywords = ["codspeed", "benchmark", "divan"]

[dependencies]
codspeed = { path = "../codspeed", version = "=3.0.5" }
divan = { package = "codspeed-divan-compat-walltime", path = "./divan_fork", version = "=3.0.5" }
codspeed-divan-compat-macros = { version = "=3.0.5", path = './macros' }

[[bench]]
name = "basic_example"
harness = false

[[bench]]
name = "sleep_benches"
harness = false

[[bench]]
name = "drop_example"
harness = false

[[bench]]
name = "thread_example"
harness = false

[[bench]]
name = "fib_example"
harness = false
