[package]
name = "codspeed-divan-compat-examples"
version = "0.0.0"
edition = "2021"
description = "Examples for Divan, a comfy benchmarking framework."
publish = false
license = "MIT OR Apache-2.0"


[dependencies]
divan = { package = "codspeed-divan-compat", path = ".." }
fastrand = "2.3.0"
num-bigint = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }

[features]
default = ["big-math"]
big-math = ["num-bigint", "num-traits"]

[[bench]]
name = "math"
harness = false

[[bench]]
name = "sort"
harness = false

[[bench]]
name = "time"
harness = false

[[bench]]
name = "time_scale"
harness = false

[[bench]]
name = "the_algorithms"
harness = false
