[package]
name = "simple"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
codspeed = { path = "../../../codspeed" }
bencher = { package = "codspeed-bencher-compat", path = "../../../bencher_compat" }

[workspace]


[[bench]]
name = "bencher_example"
harness = false

[[bench]]
name = "another_bencher_example"
harness = false
